functions but there are some bugs I'm too tired to squash

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .bold {
   font-weight: bold;
 }
+html{
+  font-family: 'Roboto', sans-serif;
+}
 .btn {
   cursor: pointer;
   padding: 6px;
@@ -13,7 +16,7 @@
   flex: 1;
   border-top: 1px solid #555;
   border-right: 1px solid #555;
-  background: linear-gradient(#4b5, #4d5);
+  background: #77f;
   border-bottom-left-radius: 20px;  
 }
 .pizzaTab:first-child {
@@ -33,7 +36,6 @@
   margin: auto 0%;
 }
 .pizzaSetting select {
-  height: 60%;
   margin: auto 0%;
   margin-left: auto; 
   background-color: rgba(0, 0, 0, 0);
@@ -62,7 +64,7 @@
   margin: 3vw auto;
 }
 .topping{
-  width: 150px;
+  width: 180px;
 }
 .box{
   display: flex;
@@ -80,18 +82,21 @@
   width: 30px;
   height: 30px;
   border-radius: 90px;
+  margin-left: 3px;
 }
 .btnLeftPizza{
   width: 15px;
   height: 30px;
   border-top-left-radius: 90px;
   border-bottom-left-radius: 90px;
+  margin-left: 3px;
 }
 .btnRightPizza{
   width: 15px;
   height: 30px;
   border-top-right-radius: 90px;
   border-bottom-right-radius: 90px;
+  margin-left: 3px;
 }
 
 #titleBar {
@@ -102,9 +107,9 @@
   padding: 5px;
 }
 #pizzaSettings {
-  display: none;
+  visibility: hidden;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin: 10px;
 }
 #orderingArea {
   display: flex;
@@ -278,9 +283,13 @@
 #yourToppingsList{
   margin-left: auto;
   margin-right: auto;
-  width: 55%;
-  max-height: 60px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 70%;
+  height: 80px;
   overflow: auto;
+  background-color: #BBB;
+  visibility: hidden;
 }
 @media all and (max-width:700px) {
   .pizzaTab {
@@ -300,6 +309,9 @@
     height: 150px;
     border-bottom: 1px solid #555;
     flex-direction: row;
+  }
+  #orderDesc{
+    width: 100%;
   }
   #prebuiltHolder {
     flex-direction: column;
